[package]
name = "trading-post"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
cdrs-tokio = "8.1.1"
cdrs-tokio-helpers-derive = "5.0.2"
chrono = { version = "0.4.26", features = ["default", "serde"] }
derive_more = "0.99.17"
env_logger = "0.10.0"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
prost = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] } # not used
structopt = "0.3.26"
structopt-derive = "0.4.18"
tonic = "0.10.0"
tonic-reflection = "0.10.0"
tonic-types = "0.10.1"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "sync", "time"] } # macros, sync, time features might be not need to have
tower = { version = "0.4.13", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = { version = "0.10.0", features = ["prost"] }